--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git@gitlab.chq.ei:chq-jamesl/task-card-app.git"
+        "url": ""
     },
     "dependencies": {
         "@angular/common": "2.1.2",
